--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-form {
+.about {
     box-sizing: border-box;
     margin-left: 1em;
     width: 50%;
@@ -10,13 +10,13 @@ form {
     border-radius: 10%;
     min-height: 300px;
     min-width: 230px;
-    /* font-size: x-large; */
     font-weight:500;
     padding: 1.1em;
 }
 
-form:hover {
+.about:hover {
     transition: 0.2s ease-in;
     background-color: rgba(187, 154, 169, 0.907);
     transform: scale(1.003);
 }
+
